[package]
name = "my-redis-rs"
version = "0.1.0"
edition = "2024"
authors = ["Po-Yeh Chen <poyehchen@cs.nycu.edu.tw>"]
license-file = "LICENSE"
description = "A mini redis clone in Rust."

[dependencies]
ahash = "0.8.11"
anyhow = "1"
bytes = "1"
evmap = "10"
nom = "8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
